[gd_scene load_steps=29 format=3]

[ext_resource type="Script" path="res://Script/Main_menu/GameAnnouncement.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://m2mf7ndsvior" path="res://Art/LDL/85.png" id="2"]
[ext_resource type="FontFile" uid="uid://bicgw4numqquw" path="res://Font/HYZhuZiMeiXinTiW.ttf" id="3"]
[ext_resource type="FontFile" uid="uid://ond0o3n8a00i" path="res://Font/华康宋体W3.ttc" id="4"]
[ext_resource type="Texture2D" uid="uid://t8l066v8xryp" path="res://Art/game_pic/679.PNG" id="5"]
[ext_resource type="FontFile" uid="uid://2rjpff4w8bmb" path="res://Font/华康海报体W12 &amp; 华康海报体W12(P).ttc" id="6"]
[ext_resource type="Texture2D" uid="uid://dy6di5exxa3sk" path="res://Art/LDL/86.png" id="7"]
[ext_resource type="Texture2D" uid="uid://cmaxhcvx6roda" path="res://Art/LDL/87.png" id="8"]

[sub_resource type="StyleBoxEmpty" id="1"]
script = null

[sub_resource type="StyleBoxEmpty" id="2"]
script = null

[sub_resource type="StyleBoxEmpty" id="3"]
script = null

[sub_resource type="StyleBoxEmpty" id="4"]
script = null

[sub_resource type="StyleBoxEmpty" id="5"]
script = null

[sub_resource type="StyleBoxEmpty" id="6"]
script = null

[sub_resource type="StyleBoxEmpty" id="7"]
script = null

[sub_resource type="StyleBoxEmpty" id="8"]
script = null

[sub_resource type="StyleBoxEmpty" id="9"]
script = null

[sub_resource type="StyleBoxEmpty" id="10"]
script = null

[sub_resource type="StyleBoxEmpty" id="11"]
script = null

[sub_resource type="StyleBoxEmpty" id="12"]
script = null

[sub_resource type="StyleBoxEmpty" id="13"]
script = null

[sub_resource type="StyleBoxEmpty" id="14"]
script = null

[sub_resource type="StyleBoxEmpty" id="15"]
script = null

[sub_resource type="StyleBoxEmpty" id="16"]
script = null

[sub_resource type="StyleBoxEmpty" id="17"]
script = null

[sub_resource type="StyleBoxEmpty" id="18"]
script = null

[sub_resource type="StyleBoxEmpty" id="19"]
script = null

[sub_resource type="StyleBoxEmpty" id="20"]
script = null

[node name="GameAnnouncement" type="Node2D"]
script = ExtResource( "1" )

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -174.0
offset_top = -224.0
offset_right = 1097.0
offset_bottom = 767.0
color = Color(1, 1, 1, 0)
metadata/_edit_lock_ = true

[node name="BG" type="Sprite2D" parent="."]
position = Vector2(470, 296)
texture = ExtResource( "2" )
metadata/_edit_lock_ = true

[node name="BB2" type="Label" parent="BG"]
offset_left = -197.0
offset_top = -280.0
offset_right = 293.0
offset_bottom = -241.0
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 35
text = "点击版本号查看该版本更新内容"
metadata/_edit_lock_ = true

[node name="BB3" type="Label" parent="BG"]
texture_filter = 2
offset_left = -464.0
offset_top = -309.0
offset_right = -241.0
offset_bottom = -189.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0.0745098, 0.0745098, 1)
theme_override_constants/outline_size = 2
theme_override_constants/shadow_outline_size = 7
theme_override_fonts/font = ExtResource( "4" )
theme_override_font_sizes/font_size = 20
text = "本作完全免费，网上付费购买的均为盗版！如若遇到，请举报，谢谢！！"
vertical_alignment = 1
autowrap_mode = 1
metadata/_edit_lock_ = true

[node name="BB4" type="Label" parent="BG"]
texture_filter = 2
offset_left = -241.0
offset_top = -244.0
offset_right = 382.0
offset_bottom = -202.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_constants/shadow_outline_size = 6
theme_override_fonts/font = ExtResource( "4" )
theme_override_font_sizes/font_size = 17
text = "本作为作者为自己制作的游戏，仅用于分享，难度可能较高，敬请理解！！切勿用于商业用途！！！"
vertical_alignment = 1
autowrap_mode = 1
metadata/_edit_lock_ = true

[node name="InfoBg" type="ColorRect" parent="BG"]
offset_left = -227.0
offset_top = -204.0
offset_right = 435.0
offset_bottom = 228.0
color = Color(0, 0, 0, 0.47451)
metadata/_edit_lock_ = true

[node name="BB" type="Label" parent="BG/InfoBg"]
layout_mode = 0
offset_top = 7.0
offset_right = 659.0
offset_bottom = 46.0
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 35
text = "V0.1更新详情"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="Line_1" type="TextureRect" parent="BG/InfoBg/BB"]
show_behind_parent = true
layout_mode = 0
offset_left = -52.0
offset_top = -2.0
offset_right = 731.0
offset_bottom = 38.0
texture = ExtResource( "5" )
metadata/_edit_lock_ = true

[node name="ScrollContainer" type="ScrollContainer" parent="BG/InfoBg"]
layout_mode = 0
offset_left = 24.0
offset_top = 53.0
offset_right = 650.0
offset_bottom = 420.0
metadata/_edit_lock_ = true

[node name="TextList" type="VBoxContainer" parent="BG/InfoBg/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15

[node name="BBBg" type="ColorRect" parent="BG"]
offset_left = -450.0
offset_top = -203.0
offset_right = -272.0
offset_bottom = 229.0
color = Color(0, 0, 0, 0.47451)
metadata/_edit_lock_ = true

[node name="BB" type="Label" parent="BG/BBBg"]
layout_mode = 0
offset_left = 35.0
offset_top = 11.0
offset_right = 140.0
offset_bottom = 50.0
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 35
text = "版本号"

[node name="ScrollContainer" type="ScrollContainer" parent="BG/BBBg"]
layout_mode = 0
offset_top = 58.0
offset_right = 171.0
offset_bottom = 424.0

[node name="bblist" type="VBoxContainer" parent="BG/BBBg/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 15

[node name="V0_1" type="Button" parent="BG/BBBg/ScrollContainer/bblist"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0.466667, 0, 1)
theme_override_fonts/font = ExtResource( "6" )
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource( "1" )
theme_override_styles/hover = SubResource( "2" )
theme_override_styles/pressed = SubResource( "3" )
theme_override_styles/disabled = SubResource( "4" )
theme_override_styles/focus = SubResource( "5" )
text = "V1.0"

[node name="V0_2" type="Button" parent="BG/BBBg/ScrollContainer/bblist"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0.466667, 0, 1)
theme_override_fonts/font = ExtResource( "6" )
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource( "6" )
theme_override_styles/hover = SubResource( "7" )
theme_override_styles/pressed = SubResource( "8" )
theme_override_styles/disabled = SubResource( "9" )
theme_override_styles/focus = SubResource( "10" )
text = "V1.1"

[node name="V0_3" type="Button" parent="BG/BBBg/ScrollContainer/bblist"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0.466667, 0, 1)
theme_override_fonts/font = ExtResource( "6" )
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource( "11" )
theme_override_styles/hover = SubResource( "12" )
theme_override_styles/pressed = SubResource( "13" )
theme_override_styles/disabled = SubResource( "14" )
theme_override_styles/focus = SubResource( "15" )
text = "V1.1.0.1"

[node name="V0_4" type="Button" parent="BG/BBBg/ScrollContainer/bblist"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0.466667, 0, 1)
theme_override_fonts/font = ExtResource( "6" )
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource( "16" )
theme_override_styles/hover = SubResource( "17" )
theme_override_styles/pressed = SubResource( "18" )
theme_override_styles/disabled = SubResource( "19" )
theme_override_styles/focus = SubResource( "20" )
text = "V1.2"

[node name="V0_5" type="Button" parent="BG/BBBg/ScrollContainer/bblist"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0.466667, 0, 1)
theme_override_fonts/font = ExtResource( "6" )
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource( "16" )
theme_override_styles/hover = SubResource( "17" )
theme_override_styles/pressed = SubResource( "18" )
theme_override_styles/disabled = SubResource( "19" )
theme_override_styles/focus = SubResource( "20" )
text = "V1.2.0.1"

[node name="V0_6" type="Button" parent="BG/BBBg/ScrollContainer/bblist"]
visible = false
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0.466667, 0, 1)
theme_override_fonts/font = ExtResource( "6" )
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource( "16" )
theme_override_styles/hover = SubResource( "17" )
theme_override_styles/pressed = SubResource( "18" )
theme_override_styles/disabled = SubResource( "19" )
theme_override_styles/focus = SubResource( "20" )
disabled = true
text = "V1.2"

[node name="Close" type="TextureButton" parent="BG"]
offset_left = 392.0
offset_top = -268.0
offset_right = 446.0
offset_bottom = -248.0
texture_normal = ExtResource( "7" )
texture_pressed = ExtResource( "7" )
texture_hover = ExtResource( "8" )
texture_disabled = ExtResource( "7" )
metadata/_edit_lock_ = true

[connection signal="pressed" from="BG/BBBg/ScrollContainer/bblist/V0_1" to="." method="_on_v_0_1_pressed" flags=18]
[connection signal="pressed" from="BG/BBBg/ScrollContainer/bblist/V0_2" to="." method="_on_v_0_2_pressed" flags=18]
[connection signal="pressed" from="BG/BBBg/ScrollContainer/bblist/V0_3" to="." method="_on_v_0_3_pressed" flags=18]
[connection signal="pressed" from="BG/BBBg/ScrollContainer/bblist/V0_4" to="." method="_on_v_0_4_pressed" flags=18]
[connection signal="pressed" from="BG/BBBg/ScrollContainer/bblist/V0_5" to="." method="_on_v_0_5_pressed" flags=18]
[connection signal="pressed" from="BG/Close" to="." method="_on_close_pressed" flags=18]
