extends Node2D
@onready var text_list: VBoxContainer = $BG/InfoBg/ScrollContainer/TextList
@onready var bb: Label = $BG/InfoBg/BB

var VerisionsName: String = "V1_0"
var Verisions: String = "V1.0"
var TextList = {
	"V1_0":[
		"因本次更新改动，新增内容较多，此处展示的内容可能包揽不全，请理解！",
		"本作拒绝任何续作，魔改，任何非群或频道，b站说明发布的版本，均非本人制作，造成严重后果将会追究！",
		"",
		"一、版本新增内容：==============================",
			"1.新增角色沙僧，同步增加沙僧相关内容，掉落沙僧装备。",
			"2.关卡开放至天庭篇。",
			"3.新增任务机制：完成任务目标可以领取相应的奖励。",
			"4.炼丹炉新增分解功能：可以通过分解物品获取稀有材料。",
			"5.炼丹炉新增打造功能：根据装备图纸，集齐相关材料可以放入宝珠打造装备。",
			"6.新增法宝：枯叶灵，萱花葫芦，青云剑，混元伏妖盾，紫金葫芦。",
			"7.新增头衔：头衔可通过特殊方式获得。",
			"8.新增各角色转轮王时装，牛魔王时装（三形态概率掉落普通品质，优秀及以上品质拥有技能！），部分时装新增掉宝率加成。",
			"9.新增消耗品：幸运的喜鹊，使用后可获得1小时双倍掉率。",
			"10.玲珑宝塔新增模式功能，达到boss层的再上一层，后续可以直接传送至下位boss层。",
			"11.兜率宫新增选层功能，机制同玲珑宝塔。",
			"12.新增商城：神秘店铺，神秘店铺出售大量稀有道具。",
			"13.新增丹药功能：兜率宫的怪物会掉落丹药合成相关材料，服用丹药可以提升大量属性。",
			"14.合成帮助新增时装模块。",
			"15.新增奖励获取界面，便于了解获取的奖励内容。",
			"16.新增Boss技能信息界面，可以查看Boss技能详情（位置：主菜单，游戏帮助，下方Boss技能介绍）。",
			"",
			"二、游戏优化：==================================",
			"1.优化怪物死亡后灵魂生成动画及灵魂追不上玩家的问题。",
			"2.Buff机制重做，优化同类buff图标堆叠问题，现在buff图标不再一味的向后叠加，而是显示对应叠加层数。",
			"3.对部分特效错位问题进行了调整。",
			"4.物品属性图重做，字体，颜色进行了修改。",
			"5.现在物品格点击过快会失效，请不要点击过快或使用连点器。",
			"6.优化角色死亡动画。",
			"7.部分关键部位增加确定框，避免出现误触。",
			"8.人物，装备，怪物数值全部重做。",
			"9.物品属性图显示超出屏幕右侧将会移至左侧显示。",
			"10.对部分模糊素材清晰度进行优化。",
			"11.优化部分字体。",
			"12.孟婆无限召唤作为机制保留。",
			"13.悟空最后一击攻击间隔缩短，普攻能无限连太变态了，到时候没体验别赖我。",
			"14.90%以上Boss掉率可以做到使用双倍必掉。",
			"",
			"三、问题修复：==================================",
			"1.修复角色猪八戒技能升级的问题，这个问题曾导致：升级旋滚球技能等级会提升地滚球伤害。",
			"2.修复法宝白霜镜索敌过程中，目标消失自身会卡住的问题。",
			"3.修复使用孟婆药剂会将未学习技能等级也重置为1的问题。",
			"4.修复唐僧使用水幻影，回血回魔变为双倍的问题。",
			"5.修复属性图可能显示错误信息的问题。",
			"6.修复曼珠，沙华相互回血时，可以复活的Bug。",
			"7.修复Boss阎罗王【三道鬼门】在被施加控制类效果时，失去弱霸体效果的问题。",
			"",
			"四、删除：==================================",
			"1.永久删除战斗力功能，同步删除关卡信息推荐战斗力。",
			"2.永久删除难度选择功能。",
			"3.商城删除部分商品。",
			"4.嗜血狂鲨不再掉落强化石，红孩儿不再掉落强化石宝箱。",
			"",
			"五、调整：==================================",
			"1.移除悟空烈焰闪搭配火魔斩可以做到无缝衔接的机制。",
			"2.升龙斩施法速度减慢，火眼金睛最大爆炸次数由随等级增加调整为固定3次。",
			"3.角色部分技能倍率进行调整。",
			"4.角色受击特效进行调整。",
			"5.战神刑天索敌AI进行调整。",
			"6.当前角色技能除被动外，上限均为1级。",
			"7.装备品质进行调整。",
			],
	"V1_1":[
			"本作拒绝任何续作，魔改，任何非群或频道，b站说明发布的版本，均非本人制作，造成严重后果将会追究！",
			"",
			"一、情况说明：==================================",
			"1.因为我是比较喜欢难度高一些的游戏，所以想放一个适合我自己难度的关卡，我觉得多练习一下跳上去还是挺轻松的，但我没想到竟然会难住这么多人，十分抱歉，其实因为分享的缘故，很多关卡已经一点挑战性没有了，我也没办法保证符合所有人的体验，按照我自己难度来设定对于80%以上玩家来说又太难，所以只能勉强折中。有什么问题，可以提，好说好商量，上来就骂人我觉得不对吧，作为自己的游戏，我本身就没有考虑大众手感的义务，怕有人不懂，基本上哪里都加了帮助，我自己没事做游戏帮助干嘛呢，怕难度太高，又把怪物削了，已经做出很多让步了，然后又过来不分青红皂白就开始骂人，说不考虑玩家，我觉得这样没意思",
			"",
			"2.由于上版本Bug过多，严重影响游戏内平衡，为防止恶意利用旧版本的行为出现，存档将不继承。",
			"",
			"3.因为双开，使用连点器，脚本，ce，随意更改存档文件名，游戏文件名，乱移存档文件，破解存档文件导致的问题概不负责。",
			"",
			"4.这次修复后，除了修bug一段时间内就不继续做新内容了，没那么多时间，暂时当作最终版本就可以了，希望大家能玩的开心。",
			
			"二、游戏调整：==================================",
			"1.下调九重天难度:",
			"(1).恶鹰生成速度4s/波 → 6/s每波。",
			"(2).恶鹰生成数量 3~5只 → 1~2只。",
			"(3).取消坠落伤害的设定。",
			"(4).台阶移动速度下调。",
			"(5).台阶相互之间间距缩小。",
			"2.下调部分角色技能伤害，护盾减伤，吸血能力。",
			"3.检测关闭，环境已经乌烟瘴气了，我也懒得管了，具体怎么样看自觉，别来恶心我就行。",
			"4.萱花葫芦取消增伤。",
			"5.对巫毒娃娃造成直接伤害后，目标怪物将会被吸引仇恨。",
			"",
			"三、问题修复：==================================",
			"1.修复沙僧鸣人装巨额生命的问题。",
			"2.修复沙僧会持有悟空嗜血技能的问题。",
			"3.修复幻化功能中，唐僧没有装备【七彩袍】，沙僧没有武器【紫金降魔铲】的问题。",
			"4.修复角色通过【兜率宫】后，将无法获取经验的问题。",
			"5.修复当前幻化数量存档可能会互通的问题。",
			"6.修复头衔无法免疫蛟魔王【覆海啸技能眩晕】的问题。",
			"7.修复整理背包时，无法整理【第10页】背包的问题。",
			"8.修复背包【第10页】无法添加物品的问题。",
			"9.修复背包已满后，仍然可以捡拾物品，物品消失的问题。",
			"10.修复背包已满后，卖出物品，仍然无法捡拾的问题。",
			"11.修复【通天令牌碎片1】数量显示为0的问题和其相关数据，该问题曾导致：通天令牌碎片3无法获得。",
			"12.修复头衔无法免疫鲨魔王【嗜血狂鲨技能流血效果】的问题。",
			"13.修复背包已满后，拆卸装备，装备会丢失的问题（现在背包满后将无法拆卸装备）。",
			"14.修复悟空火眼金睛可以继承不被击中，攻击敌人的bug。",
			"15.修复打造装备中宝珠的bug。",
			"16.修复打造装备中宝珠添加2个及以上，卸下宝珠时，游戏崩溃的问题。",
			"17.修复玲珑宝塔相关问题。",
			"18.修复丝绸名字显示为檀木的问题。",
			"19.修复消耗品无法卖出的问题。",
			"20.关于喜鹊莫名消失和兜率宫无限恐惧的问题无论怎么复刻也没有实现过，也找不到问题出现的原因，暂时先这样吧，我给喜鹊价格降低一些。",
			"21.修复兜率宫关卡信息界面没有银角大王的问题。",
			"22.修复背包满后，整理物品，物品将会全部丢失的问题。",
			"23.修复丢掉道具输入数量小于0将会获得同等量道具的问题。",
			"24.修复无常巷关卡信息界面不显示沙僧白霜武器的问题。",
			"25.修复唐僧魂器防具不显示外观的问题。",
			"26.修复八戒土魔刺释放后，刺会闪烁的问题。",
			"27.修复沙僧剧毒阵只会造成一次伤害之后卡住的问题，并新增减速效果。",
			"",
			"四、游戏优化：==================================",
			"1.优化场景内掉落物数量稍微偏高则会卡顿，掉帧的问题（现在可以一个不捡通关也不会卡顿，具体还是要看你的设备）。",
			"2.优化法宝【混元伏妖盾】的技能描述。",
			"3.银角大王碎片掉落不与毒丹冲突，且掉落数量增加为固定每次10个。",
			],
	"V1_1_0_1":[
			"本作拒绝任何续作，魔改，任何非群或频道，b站说明发布的版本，均非本人制作，造成严重后果将会追究！",
			"",
			"一、情况说明：==================================",
			"无新内容，还是bug修复，新内容一段时间内先不做，没有时间，还是以抽空修bug为主。",
			"",
			"二、游戏优化：==================================",
			"1.现在幻化列表只需拥有此装备即可永久解锁，无需一直拥有（但需要拥有后去一次幻化界面！）。",
			"2.悟空烈焰风暴击退效果和间隔调整。",
			"3.角色进入关卡初始方向调整为默认朝向右侧。",
			"4.游戏设置新增【角色武器】，【角色身体】显示关闭功能（娱乐模式，可以玩玩不显示武器的角色）。",
			"",
			"三、问题修复：==================================",
			"1.修复新建存档，存档内容可能互通的问题。",
			"2.修复唐僧魂器武器不显示外观的问题。",
			"3.修复幻化功能中，头衔【业余收藏家】幻化界面不显示外观的问题。",
			],
	"V1_2":[
			"本作拒绝任何续作，魔改，任何非群或频道，b站说明发布的版本，均非本人制作，造成严重后果将会追究！",
			"",
			
			"一、情况说明：==================================",
			"1.我就是一新手，这也是我做的第一个游戏，一点经验没有，所以不要指望我能做的多好，考虑所有玩家的情况是根本不可能的，还是建议玩的不舒服就玩别的吧，不要对这个游戏抱有多大的期望，没意义，也不可能。",
			"2.关于字体乱码的问题，大概率是你系统太久了，虽然我把字体改成自定义的可以解决，但是不可能所有地方都顾及到因此这并不是长久办法，这边还是建议用较新的系统，把乱码的位置告诉我，我好替换字体。",
			"3.图片错位和无法打开游戏，可能是兼容的问题，我不太懂这些，但是无论使用那种模式，都会多多少少出现问题，例如就像现在的卡顿，无法进入游戏，或者错位问题。",
			"4.希望发现bug的时候，如果方便，尽量找到触发的条件，一个人实在是找不到问题出在哪，也就修不了，时间也不够。",
			"5.角色开启条件：1.悟空：无要求
						   2.唐僧：无要求
						   3.八戒：通关图2火焰山红孩儿
						   4.沙僧：到达图3
						   5.白龙：击败昆仑山→解救白龙→五行祖巫
						"
						,
			"",
			"二、版本新增内容：==============================",
			"1.新增功能：【轮回幻境】——娱乐功能，可以自己设置挑战boss，具体效果请前往该功能查看",
			"2.新增各角色boss外观及幻化",
			"3.截教天境开启，关卡开放至火龙岛。",
			"4.新增角色技能间隔时间显示，左下方技能栏。",
			"5.新增法宝技能冷却显示。",
			"6.新增角色小白龙，详情请以实际为准，白龙连击次数比较多，游玩可能会掉帧。",
			"7.新增魔法恢复，扣除的飘字显示。",
			"8.新增翅膀，头衔显示开关，背包内设置。",
			"9.新增关卡信息界面等级压制显示（等级压制：玩家等级低于怪物等级，则各项属性对其影响均削弱，反之增强，之前就有，这回显示出来，大概压8~9级就不可能出暴击了，各项副属性等同于0。）。",
			"10.新增副本回到过去，掉落邪灵法宝制作书和打造材料，目前法宝未制作，可以先攒材料。",
			"11.新增翅膀喜鹊之翼（龟丞相概率掉落）,白霜之翼（白骨精三阶段概率掉落），句芒之翼（五行祖巫概率掉落），刑魔之翼（任务“无首神”奖励）同步增加对应翅膀的幻化。",
			"12.新增挑战后羿副本，后羿必定掉落普通品质的射日英雄头衔，当前可以合成到邪灵品质。",
			"13.新增各角色专属头衔，达到指定等级后可在商城购买！",
			"",
			"三、游戏调整及优化：==================================",
			"1.所有角色技能间隔调整",
			"2.悟空烈焰风暴现在在空中释放不会停止移动，可以滑动。",
			"3.清除悟空突刺类技能释放结束后的速度。",
			"4.悟空筋斗云调整：筋斗云不再释放向前冲刺后下一次进行向上冲刺，改为按w键使用筋斗云，才会向上冲刺。",
			"5.唐僧技能调整：水幻影和紧箍咒释放将不会顿一下了，水幻影二段不会耗蓝，回血技能转为与生命上限有关。",
			"6.角色选择限制：猪八戒：通过红孩儿，沙僧：到达天庭，白龙：击败五行祖巫。",
			"7.八戒土魔刺蓝耗提升，伤害调整，释放速度增加，巨石破伤害增加，无双状态减伤和刃甲概率回复效果略微提升。",
			"8.沙僧万毒之体，巫毒娃娃空中释放不再会定在原地，灵魂摄取技能间隔增加。",
			"9.玩家昵称字体调整。",
			"10.装备分解宝石需要品质调整，宝石数量调整。",
			"11.转轮王，牛魔王三形态时装掉率15% → 50%（不受掉宝加成提升）掉落改为回到过去副本。",
			"12.兜率宫信息界面背景 玲珑塔背景 → 兜率宫背景。",
			"13.青牛精扔出的斧子将会持续在原地旋转。",
			"14.【黑虎】【黑龟】【巫鹰】将会掉落基础材料。",
			"15.通关条件改为进传送门才算通关。",
			"16.下调法宝【青云剑】的伤害和穿透效果。",
			"17.牛魔王三形态重做（机制未改动）。",
			"18.现在佩戴【丝血鱼人】头衔后生命及上限立刻将为1并且本关内将永久无法回复生命。",
			"19.调整孟婆与角色贴身无法击中玩家的问题。",
			"20.奖励现在领取后会直接保存游戏。",
			"21.转轮三通天令牌碎片2掉落现在不与装备掉落冲突但不受掉宝影响，爆率为50%。",
			"22.角色选人界面修改，界面外观优化。",
			"23.存档个数由6→无限，但请不要添加过多，以免造成卡顿。",
			"24.开放其他角色装备参与法宝合成。",
			"25.优化部分字体显示不清的问题。",
			"26.商城装备分类现在包含头衔。",
			"",
			"四、问题修复：==================================",
			"1.修复角色昵称相关问题。",
			"2.修复部分字体乱码的问题。",
			"3.修复打造功能，制作书错位的问题。",
			"4.修复金角大王天虎斩技能下落速度的bug和面朝右侧无法向正确方向扔出刀的bug。",
			"5.修复金角大王技能逻辑错误导致某些技能无法正确释放的bug。",
			"6.修复青牛精冲锋在攻击范围内只会受到一次攻击的bug。",
			"7.修复Boss等级压制计算错误的bug。",
			"8.修复牛魔王三形态不会掉时装的bug。",
			"9.修复沙僧蛟龙甲制作书描述错误。",
			"10.修复buff信息描述错误的问题。",
			"11.修复唐僧装备【锦镧袈裟】可以掉落但不显示掉落物的问题。",
			"12.修复猕猴王通风掉落制作书可能掉落两个的问题。",
			"13.修复道具【幸运的喜鹊】buff时间流逝异常的Bug(或许还有问题)。",
			"14.修复悟空重斩释放结束后人物会闪动的问题。",
			"15.修复唐僧在释放水魔爆过程中，概率被控住后控制消失但仍无法行动的问题。",
			"16.修复Buff每秒流失文本显示错误问题。",
			],
	"V1_2_0_1":[
			"本作拒绝任何续作，魔改，任何非群或频道，b站说明发布的版本，均非本人制作，造成严重后果将会追究！",
			"",
			"一、情况说明：==================================",
			"此版本为针对1.2版本问题的修复版本",
			"",
			"",
			"二、游戏调整：==================================",
			"加强部分怪物",
			"三、问题修复：==================================",
			"1.修复高级龙王，转轮王三形态和某些boss不掉落白龙装备的问题。",
			"2.修复【无首神】任务翅膀无法领取奖励的bug。",
			"3.修复丝血鱼人bug。",
			"4.修复奖励系统bug。",
			"5.修复五龙轮bug。",
			"6.修复唐僧武器贴图问题。",
			"7.白龙邪灵参与道具合成。",
			"8.修复罗刹妖伞无法合成的问题。",
			"9.更改法宝合成路径。",
			"10.关卡信息界面添加漏掉的白龙白装和白霜之翼掉落。",
			"11.修复小白龙部分头衔无法显示的问题。",
			"12.修复八戒战争怒吼和唐僧紧箍咒可以对天庭战神影子释放的问题。",
			"13.苍龙戒和伏妖盾免死buff会被魔童清除的问题。",
			"14.修复喜鹊buff时间bug，该bug曾导致：在同时拥有喜鹊和其他buff时，若重新进入关卡，则喜鹊buff时间变为其他buff剩余时间。",
			"15.修复悟空筋斗云技能bug。",
			"16.九重天副本过关可以正常评价。",
			"17.修复技能栏不显示天煞古剑法宝技能图标的问题。",
			],
}
func _ready() -> void:
	ADDTextInfo()

func ADDTextInfo():
	RemoveAllTextInfo()
	bb.text = str(Verisions) + "更新详情"
	if VerisionsName == "" or VerisionsName == null:
		return
	for i in TextList[VerisionsName]:
		Global.ADDFont_(text_list,i,"res://Font/华康宋体W3.ttc",17,"FFFFFF",2,"FFFFFF")

func RemoveAllTextInfo():
	for i in text_list.get_children():
		i.queue_free()
		#text_list.remove_child(i)
func _on_v_0_1_pressed() -> void:
	VerisionsName = "V1_0"
	Verisions = "V1.0"
	ADDTextInfo()

func _on_v_0_2_pressed() -> void:
	VerisionsName = "V1_1"
	Verisions = "V1.1"
	ADDTextInfo()


func _on_close_pressed() -> void:
	queue_free()


func _on_v_0_3_pressed() -> void:
	VerisionsName = "V1_1_0_1"
	Verisions = "V1.1.0.1"
	ADDTextInfo()


func _on_v_0_4_pressed() -> void:
	VerisionsName = "V1_2"
	Verisions = "V1.2"
	ADDTextInfo()


func _on_v_0_5_pressed() -> void:
	VerisionsName = "V1_2_0_1"
	Verisions = "V1.2.0.1"
	ADDTextInfo()
